shared/src/test/data/yeast/invalid-json/null-value-no-indicator-token.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key'
Indicator           8,  2,  6 '\"'
EndScalar           9,  2,  7 ''
WhiteSpace          9,  2,  7 ' '
Error              10,  2,  8 'value\n'
EndMapping         16,  3,  0 '}'

